Fri Jul 10 17:25:31 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleHeader.cpp:

          Changed the pre-parsing of the header to not user the Serializer,
          it's too hard to reset the rd_ptrs if we need to go to the
          continuation block.  Now just manually read the first two bytes and
          leave the rd_ptrs where they are.

Thu Jul  9 22:17:52 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Fixed a deadlock situation while datawriter deletion thread
          holds the data container lock and wait for pending data clear
          out and the other thread calls data_delivered on data container
          which acquire the lock as well.

        * tests/DCPS/Reconnect/run_test.pl:

          Extended publisher process timeout in case there are more data
          need be clear during shutdown for the bp_timeout test case.

Thu Jul  9 21:56:37 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/FooTest3_1/run_test.pl:
        * tests/DCPS/FooTest3_2/run_test.pl:

          Extend the timeouts for the sake of the slow QNX machine.

Thu Jul  9 18:21:55 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * DDS_release_notes.txt:

          Noted Windows Mobile and ACE_USES_WCHAR support.

        * MPC/modules/IDL2JNIHelper.pm:

          Fixed Perl syntax error.

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/transport/framework/TransportHeader.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.cpp:

          The DataSampleHeader is now variable-length so we need a way for the
          transport to know if it has enough bytes queued up to make a header.
          This should fix the intermittent LivelinessTest failure, and in
          general will make sure that the DCPS layer gets control messages
          (0 bytes of sample data) right away.

        * dds/DCPS/transport/framework/PriorityKey.h: